--- a/app/src/main/res/layout/activity_ubahevent.xml
+++ b/app/src/main/res/layout/activity_ubahevent.xml
@@ -307,6 +307,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="TextView"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/tvuuide"
         app:layout_constraintEnd_toEndOf="parent" />
 
