--- a/app/src/main/res/layout/activity_ubahevent.xml
+++ b/app/src/main/res/layout/activity_ubahevent.xml
@@ -318,7 +318,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="TextView"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
